styles.css
/* ... */
/* MAIN CODE */

/* Smooth Scroll */
@media (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

body {
  background-color: #1e1d1a;
  font-family: "Poppins", arial, helvetica, sans-serif;
  font-size: 16px;
  /* padding: 0 16px; */
  /* max-width: 1440px;
  margin: 0 auto; */
}

* {
  color: #fff;
  box-sizing: border-box;
}

/* NAV + HERO BANNER */

#hero-down-arrow,
.nav-container {
  left: 50%;
  transform: translateX(-50%);
}
.nav-container {
  display: flex;
  position: fixed;
  top: 16px;
  width: 100%;
  max-width: 1440px;
  z-index: 999;
  padding: 0 16px;
}
.nav-container__inner-container {
  display: flex;
  width: 100%;
  margin: 0 auto;
  align-items: center;
  justify-content: space-between;
  background-color: rgba(0, 0, 0, 0.9);
  border-radius: 50px;
  padding: 8px 20px;
}
.nav-logo-container {
  display: flex;
  align-items: center;
  gap: 1rem;
  width: 50%;
}
.nav-logo-container > a {
  font-size: 0;
  display: block;
}
.nav-container-ul__link-container > a,
.nav-logo-container > h3,
a#contact-nav-btn {
  font-size: 1rem;
  text-transform: uppercase;
}
.nav-logo-container > a > img {
  width: 65px;
  height: 65px;
}
.nav-logo-container > h3 {
  font-weight: 500;
}
.nav-links-container {
  width: 50%;
}
.nav-container-ul {
  display: flex;
  align-items: center;
  margin: unset;
  justify-content: flex-end;
}
.nav-container-ul > li {
  margin-right: 50px;
}
.nav-container-ul > li:last-child {
  margin-right: 5px;
}
.nav-container-ul__link-container {
  display: block;
}
.nav-container-ul__link-container > a {
  text-decoration: unset;
  font-weight: 500;
}
.hero-message-cta-container-contact:hover,
.hero-message-cta-container-services:hover,
.nav-container-ul__link-container > a:hover {
  opacity: 0.5;
}
a#contact-nav-btn {
  color: #1e1d1a;
  text-decoration: unset;
  font-weight: 600;
  border: unset;
  padding: 10px 35px;
  margin: unset;
  background-color: #e2651d;
  border-radius: 50px;
}
@media (max-width: 992px) {
  .nav-container-ul__link-container > a:not(#contact-nav-btn) {
    display: none;
  }
}
@media (max-width: 470px) {
  .nav-container-ul__link-container > a:not(#contact-nav-btn),
  .nav-logo-container > h3 {
    display: none;
  }
}
@media (max-width: 330px) {
  a#contact-nav-btn {
    padding: 12px 20px;
  }
}
.hero-section {
  min-height: 100vh;
  min-height: 100svh;
  height: auto;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.hero-section__bg {
  background-image: url("images/hero-image-fusebox.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  min-height: 100vh;
  min-height: 100svh;
  height: auto;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.1;
  filter: blur(7px);
}
.hero-section__inner-container {
  max-width: 1220px;
  margin: 0 auto;
  gap: 50px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 99;
  padding: 16px;
}
.hero-message-cta-container-contact,
.hero-message-cta-container-services {
  text-decoration: unset;
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 35px;
  margin: unset;
}
.hero-section-message {
  display: flex;
  flex-direction: column;
}
.hero-section-message > h1 {
  font-size: 3.125rem;
  font-weight: 500;
  margin-bottom: 12px;
  max-width: 650px;
}
.hero-section-message > p {
  margin-bottom: 20px;
}
.hero-message__cta-container {
  display: flex;
  gap: 15px;
  align-items: center;
}
.hero-message-cta-container-contact {
  color: #24231f;
  background-color: #fff;
  border-radius: 50px;
  min-width: 150px;
  width: 100%;
  max-width: 47%;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero-message-cta-container-contact > svg {
  fill: #000;
  width: 20px;
  height: 20px;
  margin-right: 5px;
}
.hero-message-cta-container-services {
  color: #fff;
  border: 2px solid #fff;
  background-color: unset;
  border-radius: 50px;
}
.hero-section__image img {
  width: 100%;
  max-width: 500px;
}
#hero-down-arrow {
  max-width: 40px;
  position: absolute;
  bottom: 50px;
}
@media (max-width: 1180px) {
  .nav-container {
    top: 0;
    padding: unset;
  }
  .nav-container__inner-container {
    border-radius: unset;
    padding: 8px 16px;
  }
  .hero-section__inner-container {
    flex-direction: column;
    gap: 20px;
  }
  .hero-section-message {
    order: 2;
    max-width: 490px;
  }
  .hero-message__cta-container {
    order: 1;
  }
  .hero-section-message > h1 {
    font-size: 2.5rem;
  }
  .hero-section__image img {
    max-width: 300px;
  }
}
@media (max-height: 800px) {
  .hero-section__image img {
    display: none;
  }
}
@media (max-height: 900px) {
  #hero-down-arrow {
    bottom: 20px;
  }
}
@media (max-height: 500px) {
  #hero-down-arrow {
    display: none;
  }
}
.whatsapp-chat-container {
  display: flex;
  justify-content: end;
  position: fixed;
  right: 0px;
  bottom: 20px;
  z-index: 999;
  padding: 0 16px;
}
.whatsapp-chat-container:hover {
  cursor: pointer;
}
.whatsapp-chat-container p {
  font-size: 0;
}
.whatsapp-chat-container svg {
  height: 65px;
  width: 65px;
}
@media (max-width: 520px) {
  .hero-message__cta-container {
    flex-direction: column;
    width: 100%;
    gap: 15px;
  }
  .hero-message-cta-container-contact {
    max-width: unset;
  }
  .hero-section-message > p {
    white-space: normal;
  }
  .hero-section-message > p > br {
    display: none;
  }
  .hero-message__cta-container > a {
    width: 100%;
    display: flex;
    justify-content: center;
    line-height: 35px;
  }
  .whatsapp-chat-container {
    bottom: 5px;
  }
  .whatsapp-chat-container svg {
    width: 75px;
    height: 75px;
  }
}
/* ... */

